<resources>
    <string name="app_name">Rate&amp;Drink</string>
    <string name="title_activity_scanner">MainActivity</string>
    <string name="title_input">Input</string>
    <string name="title_scan">Scan</string>
    <string name="title_drink">Drink</string>
    <string name="add_description">Add Description</string>
    <string name="barcode_number">Barcode-number</string>
    <string name="submit">Submit</string>
    <string name="change_description">Change Description</string>
    <string name="add_image">Add Image</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="create_new_drink">Create new drink</string>
    <string name="no_drink_selected">No drink selected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="icon_name">RND</string>
</resources>