<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.drinknrate.ui.input.InputFragment"
        android:label="@string/title_input"
        tools:layout="@layout/fragment_input" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.drinknrate.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.drinknrate.ui.drink.DrinkFragment"
        android:label="@string/title_drink"
        tools:layout="@layout/fragment_drink" />
</navigation>