<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_add_desc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.input.InputFragment">

    <ScrollView
        android:id="@+id/scrollDrinkRatings"
        android:layout_width="409dp"
        android:layout_height="255dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinkDesc"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/drinkRatings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/drinkDesc"
        android:layout_width="199dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="353dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@tools:sample/backgrounds/scenic"
        />

    <Button
        android:id="@+id/addDescButton"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginStart="120dp"
        android:background="@drawable/custom_button"
        android:onClick="setDesc"
        android:text="@string/add_description"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/scrollDrinkRatings"
        app:layout_constraintStart_toStartOf="@+id/drinkDesc"
        app:layout_constraintTop_toBottomOf="@+id/addImageBtn"
        app:layout_constraintVertical_bias="0.298" />

    <Button
        android:id="@+id/changeDesc"
        android:layout_width="161dp"
        android:layout_height="47dp"
        android:layout_marginStart="208dp"
        android:background="@drawable/custom_button"
        android:onClick="changeDesc"
        android:text="@string/change_description"
        android:textColor="#ffffff"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/drinkDesc"
        app:layout_constraintStart_toStartOf="@+id/drinkDesc"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addImage"
        android:background="@drawable/custom_button"
        android:text="@string/add_image"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        android:textColor="#ffffff"/>

</androidx.constraintlayout.widget.ConstraintLayout>